Fix spacing of bathrooms names from stars

--- a/client/src/components/ModalSheet.css
+++ b/client/src/components/ModalSheet.css
@@ -6,8 +6,8 @@
 }
 
 .search{
-    padding-top: 1%;
-    padding-bottom: 1%;
+    padding-top: 10px;
+    padding-bottom: 10px;
     width: 80vw;
 }
 
@@ -55,5 +55,5 @@
     top:50%;
     object-fit: contain;
     align-self: center;
-  
+
 }
